# Samb-Technical-Test

./: .gitignore  README.md  pyproject.toml
samb_test/: hooks.py  modules.txt  utils.py
samb_test/samb_test/doctype/customer/: customer.js  customer.json  customer.py  test_customer.py
samb_test/samb_test/doctype/form_penerimaan_barang/: form_penerimaan_barang.js  form_penerimaan_barang.json  form_penerimaan_barang.py  test_form_penerimaan_barang.py
samb_test/samb_test/doctype/form_pengeluaran_barang/: form_pengeluaran_barang.js  form_pengeluaran_barang.json  form_pengeluaran_barang.py  test_form_pengeluaran_barang.py
samb_test/samb_test/doctype/item/: item.js  item.json  item.py  test_item.py
samb_test/samb_test/doctype/penerimaan_barang_detail/: penerimaan_barang_detail.json  penerimaan_barang_detail.py
samb_test/samb_test/doctype/pengeluaran_barang_detail/: pengeluaran_barang_detail.json  pengeluaran_barang_detail.py
samb_test/samb_test/doctype/supplier/: supplier.js  supplier.json  supplier.py  test_supplier.py
samb_test/samb_test/doctype/warehouse/: test_warehouse.py  warehouse.js  warehouse.json  warehouse.py
samb_test/samb_test/doctype/warehouse_stock_detail/: warehouse_stock_detail.json  warehouse_stock_detail.py
samb_test/samb_test/report/persediaan_barang_(stock)/: persediaan_barang_(stock).json
